[gd_scene load_steps=3 format=3 uid="uid://bfhbcvcx7vny0"]

[ext_resource type="Script" path="res://Scenes/Multiplayer/MultiplayerController.gd" id="1_ayqxy"]
[ext_resource type="PackedScene" uid="uid://dlstynjwd686u" path="res://Scenes/Levels/multiplayer_map.tscn" id="2_ikcw4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayqxy")
SceneMap = ExtResource("2_ikcw4")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 130.0
offset_right = 300.0
offset_bottom = 186.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 131.0
offset_right = 499.0
offset_bottom = 187.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 129.0
offset_right = 704.0
offset_bottom = 185.0
text = "Start"

[node name="nameLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 21.0
offset_right = 574.0
offset_bottom = 52.0

[node name="nameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 26.0
offset_right = 238.0
offset_bottom = 49.0
text = "Name"

[node name="hostLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 68.0
offset_right = 574.0
offset_bottom = 99.0
text = "127.0.0.1"

[node name="hostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 71.0
offset_right = 238.0
offset_bottom = 94.0
text = "Host"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
